[package]
name = "unique-type-id-derive"
version = "1.2.0"
authors = ["Victor Polevoy <fx@thefx.co>"]

license = "MIT"
description = "A unique id proc-macro generator for types."
keywords = ["unique", "type", "id", "number"]

repository = "https://github.com/vityafx/unique-type-id"

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
unique-type-id = { path = "../unique-type-id", version = "1" }
fs2 = "0.4"
