[package]
name = "unique-type-id-derive"
version = "1.4.0"
authors = ["Victor Polevoy <fx@thefx.co>"]
edition = "2021"
license = "MIT"
description = "A unique id proc-macro generator for types."
keywords = ["unique", "type", "id", "number"]
repository = "https://github.com/iddm/unique-type-id"

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
fs2 = "0.4"

[dev-dependencies]
unique-type-id = { path = "../unique-type-id" }
