[package]
name = "unique-type-id"
version = "1.0.1"
authors = ["Victor Polevoy <fx@thefx.co>"]

license = "MIT"
description = "A unique id proc-macro generator for types."
keywords = ["unique", "type", "id", "number"]
repository = "https://github.com/vityafx/unique-type-id"
documentation = "https://docs.rs/unique-typeid/"
readme = "README.md"
categories = ["development-tools"]

[dependencies]
syn = "1"
quote = "1"
