[package]
name = "unique-type-id"
version = "1.4.0"
authors = ["Victor Polevoy <fx@thefx.co>"]
edition = "2021"
license = "MIT"
description = "A unique id proc-macro generator for types."
keywords = ["unique", "type", "id", "number"]
repository = "https://github.com/vityafx/unique-type-id"
documentation = "https://docs.rs/unique-type-id/"
readme = "README.md"
categories = ["development-tools"]

[dependencies]
unique-type-id-derive = { version = "1", path = "../unique-type-id-derive" }
